--- a/index.html
+++ b/index.html
@@ -78,15 +78,16 @@ padding-top: 32px;
       padding:6px 10px; border-radius:999px; font-size:.85rem; backdrop-filter: blur(4px)
     }
 
-    /* CONTENT BOX for the rest */
 .content-box {
-  background: rgba(173, 216, 230, 0.75); /* light teal with 75% opacity */
+  background: rgba(200, 245, 245, 0.6); /* very light teal, 60% opaque */
   border-radius: 16px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.12);
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
   margin: 40px auto;
   max-width: 1100px;
-  backdrop-filter: blur(6px); /* adds a frosted-glass effect */
+  padding: 20px;
+  backdrop-filter: blur(6px);
 }
+
 
     h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
     .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
