--- a/index.html
+++ b/index.html
@@ -91,10 +91,23 @@ padding-top: 32px;
 
     h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
     .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
-    .card{ background:#fff; border:1px solid var(--border); border-radius: var(--radius); box-shadow: var(--shadow); padding:18px; display:flex; flex-direction:column }
+	
+	
+.card {
+  background: rgba(240, 255, 255, 0.85); /* very pale aqua/teal */
+  border: 1px solid var(--border);
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+  padding: 18px;
+  display: flex;
+  flex-direction: column;
+  backdrop-filter: blur(4px); /* optional: frosted look */
+}
     .card h3{ margin:0 0 6px }
     .card p{ color:var(--muted); margin:0 0 8px; flex-grow:1 }
     .card:hover{ transform: translateY(-2px); box-shadow: var(--shadow-lg) }
+	
+	
     .embed{ position:relative; padding-top:56.25%; border-radius:12px; overflow:hidden; margin:8px 0 10px; background:#000 }
     .embed iframe{ position:absolute; inset:0; width:100%; height:100%; border:0 }
     footer{ text-align:center; font-size:.9rem; color: var(--muted); margin:40px 0 10px }
