--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ padding-top: 32px;
     }
     .btn:hover{ transform: translateY(-1px); filter: saturate(1.05) }
 .btn.secondary {
-  background: rgba(200, 245, 245, 0.6); /* same light teal as content-box */
+  background: rgba(240, 255, 255, 0.85); /* very pale aqua/teal */
   color: #000; /* black text */
   border: 1px solid var(--border);
 }
