--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@ padding-top: 32px;
     <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
     <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
-    <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
+    <p>All my Unity/C# skills I taught myself and can teach myself any languages or skills. I'm also very skilled with AI, SolidWorks, Calculus, and Computers as a whole</p>
+
 
 
     <div class="top-actions">
@@ -188,6 +189,10 @@ padding-top: 32px;
 
       <h2>About Me</h2>
       <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life.</p>
+	  <p>I have a background in engineering, neurology, and psychology.</p>
+	  <p>I also have a history of addiction and am nearing 10 years clean and sober.</p>
+
+
       <h3 style="margin:8px 0 6px">Some of the games I love</h3>
       <ul>
         <li>Halo</li>
@@ -203,10 +208,13 @@ padding-top: 32px;
       <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
       <ul>
         <li><strong>Programming:</strong> C, C#, C++, Python, SolidWorks, Unity</li>
-        <li><strong>Engineering Tools:</strong> Calculus, IT</li>
+        <li><strong>Engineering Tools:</strong> Calculus, IT, Statics</li>
         <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing, Laser Cutting</li>
         <li><strong>Life Skills:</strong> Recovery and life coach — 10 years, Inter/Intra-personal skills</li>
       </ul>
+
+      <h2>Unrelated Work</h2>
+      <p>MidGrove LLC - Property manager and Junior Developer - 2022 - 2026</p>
 
       <h2>Contact</h2>
       <p>Email: <a class="btn secondary" href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
