--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ padding-top: 32px;
 
 
     h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
-    .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); }
+    .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
 	
 	
 .card {
@@ -188,9 +188,10 @@ padding-top: 32px;
       </div>
 
       <h2>About Me</h2>
-      <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life.</p>
-	  <p>I have a background in engineering, neurology, and psychology.</p>
-	  <p>I also have a history of addiction and am 10 years sober.</p>
+      <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, 
+	  learn from different cultures, and meet people from all walks of life. I have a background in engineering, neurology, 
+	  and psychology. I also have a history of addiction and am 10 years sober.</p>
+
 
 
       <h3 style="margin:8px 0 6px">Some of the games I love</h3>
