--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ padding-top: 32px;
   <header class="hero reveal">
     <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
-    <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
-    <p>All my Unity/C# skills I taught myself and can teach myself any languages or skills. I'm also very skilled with AI, SolidWorks, Calculus, and Computers as a whole</p>
-
+    <p>I'm a natural leader, a fast learner, and very competent individual.</p>
+    <p>I'm skilled with AI, SolidWorks, Calculus, and Technology in general.</p>
+    <p>I'm capable of teaching myself new skills to acomplish my goals.</p>
 
 
     <div class="top-actions">
@@ -149,7 +149,7 @@ padding-top: 32px;
           <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Card-Based Strategy Game</h3>
-          <p>A Slay-the-Spire-style deckbuilder focused on clearing waves of enemies and building a deck. Features some custom art.</p>
+          <p>A brief Slay-the-Spire style deckbuilder focused on clearing waves of enemies and building a deck. Features a deck system, turn-based battle mechanics, and custom art.</p>
 
           <a class="btn" href="https://github.com/Uncrustable125/CardBattler" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
@@ -159,7 +159,7 @@ padding-top: 32px;
           <iframe src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Name Recall Challenge</h3>
-          <p>A memory-based game where users match faces and names. Played with an EEG monitor. Professional project for the NTL group’s NeuroCoach.</p>
+          <p>A memory-based game where users match faces and names. Professional project for the NTL group’s NeuroCoach program. Features AI generated art.</p>
 
           <div class="top-actions" style="justify-content:flex-start">
             <a class="btn" href="https://ntlgroupinc.com/neurocoach/" target="_blank" rel="noreferrer">NTL NeuroCoach Homepage</a>
@@ -172,7 +172,8 @@ padding-top: 32px;
           <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Farm Game</h3>
-          <p>A farm game similar to Stardew Valley or Harvest Moon. Shows off a tile-based farm/crop system and a dialog system. First real Unity project; some art original.</p>
+          <p>A farm game template for games similar to Stardew Valley. Shows off a few systems including a tile-based crop system, an inventory system, a dialog system, and a JSON save system.
+		  First real Unity project; some art original.</p>
           <a class="btn" href="https://github.com/Uncrustable125/Farm-Game" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
 
@@ -181,16 +182,20 @@ padding-top: 32px;
           <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Unwinnable Tic-Tac-Toe</h3>
-          <p>Quick project I made for fun. You can’t win.</p>
+          <p>Quick project I made with AI. You can’t win.</p>
 
           <a class="btn" href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
       </div>
 
       <h2>About Me</h2>
-      <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, 
-	  learn from different cultures, and meet people from all walks of life. I have a background in engineering, neurology, 
-	  and psychology. I also have a history of addiction and am 10 years sober.</p>
+      <p>
+	  I’m a deep thinker and spiritual person. I like to be around people and I like to travel. 
+	  I hope to visit around the world and learn about the diferent ways people live their lives.
+	  I spend a lot of my free time walking in the woods, playing video games, or going to social events.
+	  One thing that changed my life was my recovery from drug and alcohol addiction. I'm going on 10 years sober.
+	  I currently work as a property manager and developer, but I want to break into coding as I enjoy it very much and it feels natural to me.
+	  </p>
 
 
 
@@ -209,13 +214,13 @@ padding-top: 32px;
       <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
       <ul>
         <li><strong>Programming:</strong> C, C#, C++, Python, SolidWorks, Unity</li>
-        <li><strong>Engineering Tools:</strong> Calculus, IT, Statics</li>
-        <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing, Laser Cutting</li>
-        <li><strong>Life Skills:</strong> Recovery and life coach — 10 years, Inter/Intra-personal skills</li>
+        <li><strong>Engineering Tools:</strong> Calculus, IT, Circuits </li>
+        <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing</li>
+        <li><strong>Life Skills:</strong> Recovery and life coach, Inter/Intra-personal skills, Communication Skills</li>
       </ul>
 
       <h2>Unrelated Work</h2>
-      <p>MidGrove LLC - Property manager and Junior Developer - 2022 - 2026</p>
+      <p>MidGrove LLC - Property Manager and Developer - 2022 - 2026 (current job) </p>
 
       <h2>Contact</h2>
       <p>Email: <a class="btn secondary" href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
