--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@ padding-top: 32px;
 
       <h2>About Me</h2>
       <p>
-	  I’m a deep thinker and spiritual person. I like to be around people and I like to travel. 
-	  I hope to visit around the world and learn about the diferent ways people live their lives.
-	  I spend a lot of my free time walking in the woods, playing video games, or going to social events.
+	  I’m a deep thinker and a spiritual person. I like to be around people and I like to travel. 
+	  I hope to travel around the world and experience new things.
+	  I spend a lot of my free time walking in the woods, playing video games, or socializing.
 	  One thing that changed my life was my recovery from drug and alcohol addiction. I'm going on 10 years sober.
-	  I currently work as a property manager and developer, but I want to break into coding as I enjoy it very much and it feels natural to me.
+	  I currently work as a property manager and developer. I want to break into coding as I enjoy it very much and it feels natural to me.
 	  </p>
 
 
@@ -219,7 +219,7 @@ padding-top: 32px;
         <li><strong>Life Skills:</strong> Recovery and life coach, Inter/Intra-personal skills, Communication Skills</li>
       </ul>
 
-      <h2>Unrelated Work</h2>
+      <h2>Unrelated Work Experience</h2>
       <p>MidGrove LLC - Property Manager and Developer - 2022 - 2026 (current job) </p>
 
       <h2>Contact</h2>
