--- a/index.html
+++ b/index.html
@@ -163,9 +163,11 @@ padding-top: 32px;
 
           <div class="top-actions" style="justify-content:flex-start">
             <a class="btn" href="https://ntlgroupinc.com/neurocoach/" target="_blank" rel="noreferrer">NTL NeuroCoach Homepage</a>
-            <span style="align-self:center;color:#6b7280;font-size:12px">Project available on request</span>
+            <a class="btn" href="https://github.com/Uncrustable125/Name-Recall-Challenge" target="_blank" rel="noreferrer">View on GitHub</a>
           </div>
         </article>
+
+
 
         <article class="card reveal">
 		  <div class="embed">
@@ -213,7 +215,7 @@ padding-top: 32px;
       <h2>Other Skills</h2>
       <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
       <ul>
-        <li><strong>Programming:</strong> C, C#, C++, Python, SolidWorks, Unity</li>
+        <li><strong>Programming:</strong> C, C#, C++, Python, HTML, CSS, JavaScript, SolidWorks, Unity</li>
         <li><strong>Engineering Tools:</strong> Calculus, IT, Circuits </li>
         <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing</li>
         <li><strong>Life Skills:</strong> Recovery and life coach, Inter/Intra-personal skills, Communication Skills</li>
