--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ padding-top: 32px;
   <header class="hero reveal">
     <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
-    <p>I'm a natural leader, a fast learner, and very competent individual.</p>
-    <p>I'm skilled with AI, SolidWorks, Calculus, and Technology in general.</p>
+    <p>Natural leader, fast learner, and very competent individual.</p>
+    <p>I'm skilled with Unity, AI, SolidWorks, Calculus, and Technology in general.</p>
     <p>I'm capable of teaching myself new skills to acomplish my goals.</p>
 
 
@@ -220,6 +220,9 @@ padding-top: 32px;
         <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing</li>
         <li><strong>Life Skills:</strong> Recovery and life coach, Inter/Intra-personal skills, Communication Skills</li>
       </ul>
+      <h2>Education</h2>
+      <p>I've taken courses at universities all over the states, but a lot of my skills are self taught.</p>
+
 
       <h2>Unrelated Work Experience</h2>
       <p>MidGrove LLC - Property Manager and Developer - 2022 - 2026 (current job) </p>
