--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ padding-top: 32px;
     <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
     <p>Natural leader, fast learner, and very competent individual.</p>
-    <p>I'm skilled with Unity, AI, SolidWorks, Calculus, and Technology in general.</p>
-    <p>I'm capable of teaching myself new skills to acomplish my goals.</p>
+    <p>Skilled with Unity, AI, SolidWorks, Calculus, and Technology in general.</p>
+    <p>Capable of teaching myself new skills to acomplish my goals.</p>
 
 
     <div class="top-actions">
@@ -192,11 +192,11 @@ padding-top: 32px;
 
       <h2>About Me</h2>
       <p>
-	  I’m a deep thinker and a spiritual person. I like to be around people and I like to travel. 
-	  I hope to travel around the world and experience new things.
+	  I am a deep thinker and a spiritual person. I like to be around people and travel. 
 	  I spend a lot of my free time walking in the woods, playing video games, or socializing.
 	  One thing that changed my life was my recovery from drug and alcohol addiction. I'm going on 10 years sober.
-	  I currently work as a property manager and developer. I want to break into coding as I enjoy it very much and it feels natural to me.
+	  I currently work as a property manager and developer. 
+	  I want to break into coding because I enjoy it very much and it feels natural to me.
 	  </p>
 
 
@@ -221,7 +221,7 @@ padding-top: 32px;
         <li><strong>Life Skills:</strong> Recovery and life coach, Inter/Intra-personal skills, Communication Skills</li>
       </ul>
       <h2>Education</h2>
-      <p>I've taken courses at universities all over the states, but a lot of my skills are self taught.</p>
+      <p>I took courses at The University of Arizona and Florida State University. Many of my skills are self taught.</p>
 
 
       <h2>Unrelated Work Experience</h2>
