--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ padding-top: 32px;
           <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Card-Based Strategy Game</h3>
-          <p>A brief Slay-the-Spire style deckbuilder focused on clearing waves of enemies and building a deck. Features a deck system, turn-based battle mechanics, and custom art.</p>
+          <p>A brief Slay-the-Spire style deckbuilder focused on clearing waves of enemies and building a deck. Features a deck system, turn-based battle mechanics, rougelike deck building, and custom art.</p>
 
           <a class="btn" href="https://github.com/Uncrustable125/CardBattler" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
@@ -174,7 +174,7 @@ padding-top: 32px;
           <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Farm Game</h3>
-          <p>A farm game template for games similar to Stardew Valley. Shows off a few systems including a tile-based crop system, an inventory system, a dialog system, and a JSON save system.
+          <p>A farm game template for games similar to Stardew Valley. Shows off a few systems including a tile-based crop system, an inventory system, a dialog system, a time and date system, and a JSON save system.
 		  First real Unity project; some art original.</p>
           <a class="btn" href="https://github.com/Uncrustable125/Farm-Game" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
@@ -194,7 +194,7 @@ padding-top: 32px;
       <p>
 	  I am a deep thinker and a spiritual person. I like to be around people and travel. 
 	  I spend a lot of my free time walking in the woods, playing video games, or socializing.
-	  One thing that changed my life was my recovery from drug and alcohol addiction. I'm going on 10 years sober.
+	  One thing that changed my life was my recovery from drug and alcohol addiction. I'm currently 10 years sober.
 	  I currently work as a property manager and developer. 
 	  I want to break into coding because I enjoy it very much and it feels natural to me.
 	  </p>
@@ -225,7 +225,7 @@ padding-top: 32px;
 
 
       <h2>Unrelated Work Experience</h2>
-      <p>MidGrove LLC - Property Manager and Developer - 2022 - 2026 (current job) </p>
+      <p>MidGrove LLC - Property Manager and Developer  2022 - 2026 (current job) </p>
 
       <h2>Contact</h2>
       <p>Email: <a class="btn secondary" href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
