--- a/index.html
+++ b/index.html
@@ -9,129 +9,124 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --accent: #2563eb;
-      --text: #1f2937;
-      --muted: #4b5563;
-      --border: rgba(0,0,0,.12);
+      --accent: #1e40af;       /* darker blue */
+      --text: #e5e7eb;         /* light gray */
+      --muted: #9ca3af;        /* muted gray */
+      --border: rgba(255,255,255,.15);
       --radius: 14px;
-      --shadow: 0 4px 12px rgba(0,0,0,.10);
-      --shadow-lg: 0 8px 20px rgba(0,0,0,.12);
+      --shadow: 0 4px 12px rgba(0,0,0,.35);
+      --shadow-lg: 0 8px 20px rgba(0,0,0,.45);
     }
     *{box-sizing:border-box}
 
 body {
-padding-top: 32px;
+  padding-top: 32px;
   margin: 0;
   font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   color: var(--text);
   line-height: 1.6;
   min-height: 100vh;
 
-  /* skyblue → silver gradient */
-  background: linear-gradient(135deg, skyblue 0%, silver 100%);
+  /* dark gradient background */
+  background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
 }
 
-    /* FULL-SCREEN HERO with image + overlay */
 .hero {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
- padding-top: 100px;
+  padding-top: 100px;
   min-height: 90vh;
-        /* limit width */
-  margin: 0 auto;          /* center horizontally */
-  border-radius: 18px;     /* rounded edges */
-  overflow: hidden;        /* so background doesn’t spill */
+  margin: 0 auto;
+  border-radius: 18px;
+  overflow: hidden;
   text-align: center;
   color: #fff;
   padding: 0 16px;
 
   background:
-    linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
+    linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)),
     url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
-    .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
-    .hero p{ max-width:720px; margin:0 auto 12px; color:rgba(255,255,255,.88) }
+.hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
+.hero p{ max-width:720px; margin:0 auto 12px; color:rgba(255,255,255,.88) }
 
-    .container{max-width:1000px; margin:0 auto; padding: clamp(20px, 3vw, 28px)}
-    a{color:inherit; text-decoration:none}
+.container{max-width:1000px; margin:0 auto; padding: clamp(20px, 3vw, 28px)}
+a{color:inherit; text-decoration:none}
 
-    .btn{
-      display:inline-block; background: var(--accent); color:#fff;
-      padding:10px 16px; border-radius: var(--radius);
-      font-weight:600; border:1px solid transparent; box-shadow: var(--shadow);
-      transition: transform .15s ease, filter .2s ease;
-    }
-    .btn:hover{ transform: translateY(-1px); filter: saturate(1.05) }
+.btn{
+  display:inline-block; background: var(--accent); color:#fff;
+  padding:10px 16px; border-radius: var(--radius);
+  font-weight:600; border:1px solid transparent; box-shadow: var(--shadow);
+  transition: transform .15s ease, filter .2s ease;
+}
+.btn:hover{ transform: translateY(-1px); filter: saturate(1.05) }
 .btn.secondary {
-  background: rgba(240, 255, 255, 0.85); /* very pale aqua/teal */
-  color: #000; /* black text */
+  background: rgba(255, 255, 255, 0.1);
+  color: #e5e7eb;
   border: 1px solid var(--border);
 }
-    .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:14px }
 
-    .badges{ display:flex; flex-wrap:wrap; justify-content:center; gap:8px; margin:16px 0 }
-    .badge{
-      background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.25); color:#fff;
-      padding:6px 10px; border-radius:999px; font-size:.85rem; backdrop-filter: blur(4px)
-    }
+.top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:14px }
+
+.badges{ display:flex; flex-wrap:wrap; justify-content:center; gap:8px; margin:16px 0 }
+.badge{
+  background:rgba(255,255,255,.08);
+  border:1px solid rgba(255,255,255,.2);
+  color:#e5e7eb;
+  padding:6px 10px; border-radius:999px; font-size:.85rem; backdrop-filter: blur(4px)
+}
 
 .content-box {
-  background: rgba(200, 245, 245, 0.6); /* very light teal, 60% opaque */
+  background: rgba(30, 58, 138, 0.7); /* dark navy/blue overlay */
   border-radius: 16px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
+  box-shadow: 0 10px 30px rgba(0,0,0,.4);
   margin: 40px auto;
   max-width: 1100px;
   padding: 20px;
-  backdrop-filter: blur(6px);
+  backdrop-filter: blur(4px);
 }
 
+h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
+.grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
 
-    h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
-    .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
-	
-	
 .card {
-  background: rgba(240, 255, 255, 0.85); /* very pale aqua/teal */
+  background: rgba(51, 65, 85, 0.85); /* slate gray */
   border: 1px solid var(--border);
   border-radius: var(--radius);
   box-shadow: var(--shadow);
   padding: 18px;
   display: flex;
   flex-direction: column;
-  backdrop-filter: blur(4px); /* optional: frosted look */
+  backdrop-filter: blur(2px);
 }
-    .card h3{ margin:0 0 6px }
-    .card p{ color:var(--muted); margin:0 0 8px; flex-grow:1 }
-    .card:hover{ transform: translateY(-2px); box-shadow: var(--shadow-lg) }
-	
-	
-    .embed{ position:relative; padding-top:56.25%; border-radius:12px; overflow:hidden; margin:8px 0 10px; background:#000 }
-    .embed iframe{ position:absolute; inset:0; width:100%; height:100%; border:0 }
-    footer{ text-align:center; font-size:.9rem; color: var(--muted); margin:40px 0 10px }
+.card h3{ margin:0 0 6px; color: #fff }
+.card p{ color:var(--muted); margin:0 0 8px; flex-grow:1 }
+.card:hover{ transform: translateY(-2px); box-shadow: var(--shadow-lg) }
 
-    /* Intro transition */
-    @media (prefers-reduced-motion: no-preference){
-      .card{ transition: transform .25s ease, box-shadow .25s ease }
-      .reveal{ animation: pop .5s ease both }
-      @keyframes pop{ from{ opacity:0; transform: translateY(8px) scale(.98) } }
-    }
+.embed{ position:relative; padding-top:56.25%; border-radius:12px; overflow:hidden; margin:8px 0 10px; background:#000 }
+.embed iframe{ position:absolute; inset:0; width:100%; height:100%; border:0 }
+footer{ text-align:center; font-size:.9rem; color: var(--muted); margin:40px 0 10px }
+
+@media (prefers-reduced-motion: no-preference){
+  .card{ transition: transform .25s ease, box-shadow .25s ease }
+  .reveal{ animation: pop .5s ease both }
+  @keyframes pop{ from{ opacity:0; transform: translateY(8px) scale(.98) } }
+}
   </style>
 </head>
 <body>
-  <!-- HERO on its own (full screen) -->
   <header class="hero reveal">
     <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
     <p>Natural leader, fast learner, and very competent individual.</p>
     <p>Skilled with Unity, AI, SolidWorks, Calculus, and Technology in general.</p>
-    <p>Capable of teaching myself new skills to acomplish my goals.</p>
-
+    <p>Capable of teaching myself new skills to accomplish my goals.</p>
 
     <div class="top-actions">
       <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
@@ -139,67 +134,59 @@ padding-top: 32px;
     </div>
   </header>
 
-  <!-- Everything else in the content box -->
   <div class="content-box">
     <div class="container">
       <h2>Projects</h2>
       <div class="grid">
         <article class="card reveal">
-		  <div class="embed">
-          <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
+          <div class="embed">
+            <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Card-Based Strategy Game</h3>
-          <p>A brief Slay-the-Spire style deckbuilder focused on clearing waves of enemies and building a deck. Features a deck system, turn-based battle mechanics, rougelike deck building, and custom art.</p>
-
+          <p>A brief Slay-the-Spire style deckbuilder focused on clearing waves of enemies and building a deck. Features a deck system, turn-based battle mechanics, roguelike deck building, and custom art.</p>
           <a class="btn" href="https://github.com/Uncrustable125/CardBattler" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
 
         <article class="card reveal">
-	      <div class="embed">
-          <iframe src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k" allow="encrypted-media" allowfullscreen></iframe>
+          <div class="embed">
+            <iframe src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Name Recall Challenge</h3>
           <p>A memory-based game where users match faces and names. Professional project for the NTL group’s NeuroCoach program. Features AI generated art.</p>
-
           <div class="top-actions" style="justify-content:flex-start">
             <a class="btn" href="https://ntlgroupinc.com/neurocoach/" target="_blank" rel="noreferrer">NTL NeuroCoach Homepage</a>
             <a class="btn" href="https://github.com/Uncrustable125/Name-Recall-Challenge" target="_blank" rel="noreferrer">View on GitHub</a>
           </div>
         </article>
 
-
-
         <article class="card reveal">
-		  <div class="embed">
-          <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
+          <div class="embed">
+            <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Farm Game</h3>
           <p>A farm game template for games similar to Stardew Valley. Shows off a few systems including a tile-based crop system, an inventory system, a dialog system, a time and date system, and a JSON save system.
-		  First real Unity project; some art original.</p>
+          First real Unity project; some art original.</p>
           <a class="btn" href="https://github.com/Uncrustable125/Farm-Game" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
 
         <article class="card reveal">
-		  <div class="embed">
-          <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></iframe>
+          <div class="embed">
+            <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Unwinnable Tic-Tac-Toe</h3>
           <p>Quick project I made with AI. You can’t win.</p>
-
           <a class="btn" href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank" rel="noreferrer">View on GitHub</a>
         </article>
       </div>
 
       <h2>About Me</h2>
       <p>
-	  I am a deep thinker and a spiritual person. I like to be around people and travel. 
-	  I spend a lot of my free time walking in the woods, playing video games, or socializing.
-	  One thing that changed my life was my recovery from drug and alcohol addiction. I'm currently 10 years sober.
-	  I currently work as a property manager and developer. 
-	  I want to break into coding because I enjoy it very much and it feels natural to me.
-	  </p>
-
-
+        I am a deep thinker and a spiritual person. I like to be around people and travel. 
+        I spend a lot of my free time walking in the woods, playing video games, or socializing.
+        One thing that changed my life was my recovery from drug and alcohol addiction. I'm currently 10 years sober.
+        I currently work as a property manager and developer. 
+        I want to break into coding because I enjoy it very much and it feels natural to me.
+      </p>
 
       <h3 style="margin:8px 0 6px">Some of the games I love</h3>
       <ul>
@@ -220,9 +207,9 @@ padding-top: 32px;
         <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing</li>
         <li><strong>Life Skills:</strong> Recovery and life coach, Inter/Intra-personal skills, Communication Skills</li>
       </ul>
+
       <h2>Education</h2>
       <p>I took courses at The University of Arizona and Florida State University. Many of my skills are self taught.</p>
-
 
       <h2>Unrelated Work Experience</h2>
       <p>MidGrove LLC - Property Manager and Developer  2022 - 2026 (current job) </p>
