--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
 .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
 
 .card {
-  background: rgba(51, 65, 85, 0.85); /* slate gray */
+  background: rgbargb(170, 179, 186); /* slate gray */
   border: 1px solid var(--border);
   border-radius: var(--radius);
   box-shadow: var(--shadow);
