--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ a{color:inherit; text-decoration:none}
 }
 
 .content-box {
-  background: rgba(30, 58, 138, 0.7); /* dark navy/blue overlay */
+  background: rgba(170, 179, 186, 0.7); /* dark navy/blue overlay */
   border-radius: 16px;
   box-shadow: 0 10px 30px rgba(0,0,0,.4);
   margin: 40px auto;
@@ -96,7 +96,7 @@ h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
 .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
 
 .card {
-  background: rgbargb(170, 179, 186); /* slate gray */
+  background: rgba(51, 65, 85, 0.85); /* slate gray */
   border: 1px solid var(--border);
   border-radius: var(--radius);
   box-shadow: var(--shadow);
