--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ body {
   color: #fff;
   padding: 0 16px;
 
-  background:
-    linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)),
+  background:(rgba(rgba(170, 179, 186, 0.7),
     url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1');
   background-size: cover;
   background-position: center;
@@ -83,7 +82,7 @@ a{color:inherit; text-decoration:none}
 }
 
 .content-box {
-  background: rgba(170, 179, 186, 0.7); /* dark navy/blue overlay */
+  background: rgba(30, 58, 138, 0.7); /* dark navy/blue overlay */
   border-radius: 16px;
   box-shadow: 0 10px 30px rgba(0,0,0,.4);
   margin: 40px auto;
