--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@ body {
   line-height: 1.6;
   min-height: 100vh;
 
-  /* dark gradient background */
-  background: rgba(170, 179, 186, 0.7);
+  /* dark gradient background *
+  background: rgba(34, 44, 59, 0.7);
+  /*background: linear-gradient(135deg, #1e293b 0%, #334155 100%)*/
 }
 .hero {
   display: flex;
