--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
   min-height: 100vh;
 
   /* dark gradient background *
-  background: rgba(34, 44, 59, 0.7);
+  background: rgb(34, 44, 59);
   /*background: linear-gradient(135deg, #1e293b 0%, #334155 100%)*/
 }
 .hero {
