--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ body {
   line-height: 1.6;
   min-height: 100vh;
 
-  /* dark gradient background *
-  background: rgb(34, 44, 59);
-  /*background: linear-gradient(135deg, #1e293b 0%, #334155 100%)*/
+  /* dark gradient background */
+  background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
 }
+
 .hero {
   display: flex;
   flex-direction: column;
@@ -45,12 +45,13 @@ body {
   color: #fff;
   padding: 0 16px;
 
-  background: url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1');
+  background:
+    linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)),
+    url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-
 
 .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
 .hero p{ max-width:720px; margin:0 auto 12px; color:rgba(255,255,255,.88) }
