--- a/index.html
+++ b/index.html
@@ -10,128 +10,125 @@
   <style>
     :root{
       --accent: #2563eb;
-      --text: #1f2937;
-      --muted: #4b5563;
-      --border: rgba(0,0,0,.12);
+      --text: #e5e7eb;
+      --muted: #9ca3af;
       --radius: 14px;
-      --shadow: 0 4px 12px rgba(0,0,0,.10);
-      --shadow-lg: 0 8px 20px rgba(0,0,0,.12);
+      --shadow: 0 8px 30px rgba(0,0,0,.3);
     }
     *{box-sizing:border-box}
 
-body {
-padding-top: 32px;
-  margin: 0;
-  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  color: var(--text);
-  line-height: 1.6;
-  min-height: 100vh;
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color: var(--text);
+      line-height: 1.6;
+      min-height: 100vh;
+      background: #1f2937; /* dark background */
+    }
 
-  /* skyblue → silver gradient */
-  background: linear-gradient(135deg, skyblue 0%, silver 100%);
-}
-
-    /* FULL-SCREEN HERO with image + overlay */
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
- padding-top: 100px;
-  min-height: 90vh;
-        /* limit width */
-  margin: 0 auto;          /* center horizontally */
-  border-radius: 18px;     /* rounded edges */
-  overflow: hidden;        /* so background doesn’t spill */
-  text-align: center;
-  color: #fff;
-  padding: 0 16px;
-
-  background:
-    linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
-    url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-    .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
-    .hero p{ max-width:720px; margin:0 auto 12px; color:rgba(255,255,255,.88) }
-
-    .container{max-width:1000px; margin:0 auto; padding: clamp(20px, 3vw, 28px)}
     a{color:inherit; text-decoration:none}
 
-    .btn{
-      display:inline-block; background: var(--accent); color:#fff;
-      padding:10px 16px; border-radius: var(--radius);
-      font-weight:600; border:1px solid transparent; box-shadow: var(--shadow);
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 40px 20px;
+    }
+
+    /* HERO */
+    .hero {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 90vh;
+      text-align: center;
+      color: #fff;
+      padding: 0 16px;
+      background: url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') center/cover no-repeat;
+    }
+
+    .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
+    .hero p{ max-width:720px; margin:8px auto; color: rgba(255,255,255,.9); }
+
+    .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:20px }
+    .btn {
+      display:inline-block;
+      background: var(--accent);
+      color:#fff;
+      padding:12px 20px;
+      border-radius: var(--radius);
+      font-weight:600;
+      text-decoration:none;
       transition: transform .15s ease, filter .2s ease;
     }
-    .btn:hover{ transform: translateY(-1px); filter: saturate(1.05) }
-.btn.secondary {
-  background: rgba(240, 255, 255, 0.85); /* very pale aqua/teal */
-  color: #000; /* black text */
-  border: 1px solid var(--border);
-}
-    .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:14px }
-
-    .badges{ display:flex; flex-wrap:wrap; justify-content:center; gap:8px; margin:16px 0 }
-    .badge{
-      background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.25); color:#fff;
-      padding:6px 10px; border-radius:999px; font-size:.85rem; backdrop-filter: blur(4px)
+    .btn:hover{ transform: translateY(-2px); filter: saturate(1.05) }
+    .btn.secondary {
+      background: rgba(255, 255, 255, 0.85);
+      color: #000;
     }
 
-.content-box {
-  background: rgba(200, 245, 245, 0.6); /* very light teal, 60% opaque */
-  border-radius: 16px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.1);
-  margin: 40px auto;
-  max-width: 1100px;
-  padding: 20px;
-  backdrop-filter: blur(6px);
-}
+    /* Projects Section */
+    .project {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      margin: 60px 0;
+      padding: 40px 20px;
+      border-radius: 16px;
+      overflow: hidden;
+      color: #fff;
+      background: rgba(31, 41, 55, 0.85);
+      backdrop-filter: blur(6px);
+      box-shadow: var(--shadow);
+    }
 
+    .project iframe {
+      width: 100%;
+      height: 500px;
+      border: none;
+      border-radius: 12px;
+      margin-bottom: 20px;
+    }
 
-    h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
-    .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
-	
-	
-.card {
-  background: rgba(240, 255, 255, 0.85); /* very pale aqua/teal */
-  border: 1px solid var(--border);
-  border-radius: var(--radius);
-  box-shadow: var(--shadow);
-  padding: 18px;
-  display: flex;
-  flex-direction: column;
-  backdrop-filter: blur(4px); /* optional: frosted look */
-}
-    .card h3{ margin:0 0 6px }
-    .card p{ color:var(--muted); margin:0 0 8px; flex-grow:1 }
-    .card:hover{ transform: translateY(-2px); box-shadow: var(--shadow-lg) }
-	
-	
-    .embed{ position:relative; padding-top:56.25%; border-radius:12px; overflow:hidden; margin:8px 0 10px; background:#000 }
-    .embed iframe{ position:absolute; inset:0; width:100%; height:100%; border:0 }
-    footer{ text-align:center; font-size:.9rem; color: var(--muted); margin:40px 0 10px }
+    .project h2 {
+      font-size: 2rem;
+      margin-bottom: 12px;
+      text-align: center;
+    }
 
-    /* Intro transition */
+    .project p {
+      font-size: 1.1rem;
+      max-width: 900px;
+      text-align: center;
+      margin-bottom: 16px;
+    }
+
+    /* Footer */
+    footer {
+      text-align:center;
+      font-size:.9rem;
+      color: var(--muted);
+      margin:40px 0 10px;
+    }
+
     @media (prefers-reduced-motion: no-preference){
-      .card{ transition: transform .25s ease, box-shadow .25s ease }
-      .reveal{ animation: pop .5s ease both }
-      @keyframes pop{ from{ opacity:0; transform: translateY(8px) scale(.98) } }
+      .project{ transition: transform .25s ease, box-shadow .25s ease }
+      .project:hover{ transform: translateY(-4px); box-shadow: 0 12px 40px rgba(0,0,0,.35); }
     }
+
   </style>
 </head>
 <body>
-  <!-- HERO on its own (full screen) -->
-  <header class="hero reveal">
+
+  <!-- HERO -->
+  <header class="hero">
     <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
     <p>Natural leader, fast learner, and very competent individual.</p>
     <p>Skilled with Unity, AI, SolidWorks, Calculus, and Technology in general.</p>
-    <p>Capable of teaching myself new skills to acomplish my goals.</p>
-
+    <p>Capable of teaching myself new skills to accomplish my goals.</p>
 
     <div class="top-actions">
       <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
@@ -139,101 +136,67 @@ padding-top: 32px;
     </div>
   </header>
 
-  <!-- Everything else in the content box -->
-  <div class="content-box">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="grid">
-        <article class="card reveal">
-		  <div class="embed">
-          <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
-          </div>
-          <h3>Card-Based Strategy Game</h3>
-          <p>A brief Slay-the-Spire style deckbuilder focused on clearing waves of enemies and building a deck. Features a deck system, turn-based battle mechanics, rougelike deck building, and custom art.</p>
+  <div class="container">
 
-          <a class="btn" href="https://github.com/Uncrustable125/CardBattler" target="_blank" rel="noreferrer">View on GitHub</a>
-        </article>
+    <!-- Projects -->
+    <div class="project">
+      <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allowfullscreen></iframe>
+      <h2>Card-Based Strategy Game</h2>
+      <p>A brief Slay-the-Spire style deckbuilder focused on clearing waves of enemies and building a deck. Features a deck system, turn-based battle mechanics, rougelike deck building, and custom art.</p>
+      <a class="btn" href="https://github.com/Uncrustable125/CardBattler" target="_blank">View on GitHub</a>
+    </div>
 
-        <article class="card reveal">
-	      <div class="embed">
-          <iframe src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k" allow="encrypted-media" allowfullscreen></iframe>
-          </div>
-          <h3>Name Recall Challenge</h3>
-          <p>A memory-based game where users match faces and names. Professional project for the NTL group’s NeuroCoach program. Features AI generated art.</p>
+    <div class="project">
+      <iframe src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k" allowfullscreen></iframe>
+      <h2>Name Recall Challenge</h2>
+      <p>A memory-based game where users match faces and names. Professional project for the NTL group’s NeuroCoach program. Features AI generated art.</p>
+      <a class="btn" href="https://ntlgroupinc.com/neurocoach/" target="_blank">NTL NeuroCoach Homepage</a>
+      <a class="btn" href="https://github.com/Uncrustable125/Name-Recall-Challenge" target="_blank">View on GitHub</a>
+    </div>
 
-          <div class="top-actions" style="justify-content:flex-start">
-            <a class="btn" href="https://ntlgroupinc.com/neurocoach/" target="_blank" rel="noreferrer">NTL NeuroCoach Homepage</a>
-            <a class="btn" href="https://github.com/Uncrustable125/Name-Recall-Challenge" target="_blank" rel="noreferrer">View on GitHub</a>
-          </div>
-        </article>
+    <div class="project">
+      <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allowfullscreen></iframe>
+      <h2>Farm Game</h2>
+      <p>A farm game template for games similar to Stardew Valley. Shows off a few systems including a tile-based crop system, an inventory system, a dialog system, a time and date system, and a JSON save system. First real Unity project; some art original.</p>
+      <a class="btn" href="https://github.com/Uncrustable125/Farm-Game" target="_blank">View on GitHub</a>
+    </div>
 
+    <div class="project">
+      <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allowfullscreen></iframe>
+      <h2>Unwinnable Tic-Tac-Toe</h2>
+      <p>Quick project I made with AI. You can’t win.</p>
+      <a class="btn" href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank">View on GitHub</a>
+    </div>
 
-
-        <article class="card reveal">
-		  <div class="embed">
-          <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
-          </div>
-          <h3>Farm Game</h3>
-          <p>A farm game template for games similar to Stardew Valley. Shows off a few systems including a tile-based crop system, an inventory system, a dialog system, a time and date system, and a JSON save system.
-		  First real Unity project; some art original.</p>
-          <a class="btn" href="https://github.com/Uncrustable125/Farm-Game" target="_blank" rel="noreferrer">View on GitHub</a>
-        </article>
-
-        <article class="card reveal">
-		  <div class="embed">
-          <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></iframe>
-          </div>
-          <h3>Unwinnable Tic-Tac-Toe</h3>
-          <p>Quick project I made with AI. You can’t win.</p>
-
-          <a class="btn" href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank" rel="noreferrer">View on GitHub</a>
-        </article>
-      </div>
-
+    <!-- About Me -->
+    <div class="project">
       <h2>About Me</h2>
-      <p>
-	  I am a deep thinker and a spiritual person. I like to be around people and travel. 
-	  I spend a lot of my free time walking in the woods, playing video games, or socializing.
-	  One thing that changed my life was my recovery from drug and alcohol addiction. I'm currently 10 years sober.
-	  I currently work as a property manager and developer. 
-	  I want to break into coding because I enjoy it very much and it feels natural to me.
-	  </p>
+      <p>I am a deep thinker and a spiritual person. I like to be around people and travel. I spend a lot of my free time walking in the woods, playing video games, or socializing. One thing that changed my life was my recovery from drug and alcohol addiction. I'm currently 10 years sober. I currently work as a property manager and developer. I want to break into coding because I enjoy it very much and it feels natural to me.</p>
+    </div>
 
-
-
-      <h3 style="margin:8px 0 6px">Some of the games I love</h3>
-      <ul>
-        <li>Halo</li>
-        <li>Dishonored</li>
-        <li>Left 4 Dead</li>
-        <li>Hollow Knight</li>
-        <li>Slay the Spire</li>
-        <li>BioShock Infinite</li>
-        <li>Mass Effect</li>
-      </ul>
-
+    <div class="project">
       <h2>Other Skills</h2>
-      <p>Beyond game dev, I can tackle software, hardware, and practical projects.</p>
       <ul>
         <li><strong>Programming:</strong> C, C#, C++, Python, HTML, CSS, JavaScript, SolidWorks, Unity</li>
-        <li><strong>Engineering Tools:</strong> Calculus, IT, Circuits </li>
+        <li><strong>Engineering Tools:</strong> Calculus, IT, Circuits</li>
         <li><strong>Hardware Experience:</strong> Microcontrollers, Soldering, 3D Printing</li>
         <li><strong>Life Skills:</strong> Recovery and life coach, Inter/Intra-personal skills, Communication Skills</li>
       </ul>
+    </div>
+
+    <div class="project">
       <h2>Education</h2>
       <p>I took courses at The University of Arizona and Florida State University. Many of my skills are self taught.</p>
-
-
-      <h2>Unrelated Work Experience</h2>
-      <p>MidGrove LLC - Property Manager and Developer  2022 - 2026 (current job) </p>
-
-      <h2>Contact</h2>
-      <p>Email: <a class="btn secondary" href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
-      <p>GitHub: <a class="btn secondary" href="https://github.com/Uncrustable125" target="_blank" rel="noreferrer">Uncrustable125</a></p>
-
-      <footer>© <span id="y"></span> Ryan Rookis • Vanilla HTML/CSS</footer>
     </div>
+
+    <div class="project">
+      <h2>Work Experience</h2>
+      <p>MidGrove LLC - Property Manager and Developer  2022 - 2026 (current job)</p>
+    </div>
+
   </div>
+
+  <footer>© <span id="y"></span> Ryan Rookis • Vanilla HTML/CSS</footer>
 
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
