--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       color: var(--text);
       line-height: 1.6;
       min-height: 100vh;
-      background: #1f2937; /* dark background */
+      background: #a6fafa99; /* dark background */
     }
 
     a{color:inherit; text-decoration:none}
