--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       font-size: 2rem;
        margin-bottom: 6px; /* reduced margin to bring description closer */
       text-align: center;
+	  color: var(--text);
     }
 
     .project p {
