--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       color: var(--text);
       line-height: 1.6;
       min-height: 100vh;
-      background: #8b9e9e99; /* dark background */
+      background: #f5f5f5; 
     }
 
     a{color:inherit; text-decoration:none}
@@ -79,7 +79,7 @@
       border-radius: 16px;
       overflow: hidden;
             color: #fff;
-	  background: rgba(200, 245, 245, 0.6);
+	  background: rgba(103, 224, 224, 0.6);
 	  backdrop-filter: blur(6px);
       box-shadow: var(--shadow);
     }
