--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       color: var(--text);
       line-height: 1.6;
       min-height: 100vh;
-      background: #f5f5f5; 
+      background: #e7e8e8; 
     }
 
     a{color:inherit; text-decoration:none}
@@ -48,7 +48,7 @@
     }
 
     .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
-    .hero p{ max-width:720px; margin:8px auto; color: rgba(255,255,255,.9); }
+    .hero p{ max-width:720px; margin:8px auto; color: rgba(255,255,255,.9); font-size: clamp(1.25rem, 2.5vw, 1.75rem); line-height: 1.5; }
 
     .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:20px }
     .btn {
@@ -79,7 +79,7 @@
       border-radius: 16px;
       overflow: hidden;
             color: #fff;
-	  background: rgba(103, 224, 224, 0.6);
+	  background: rgba(83, 184, 184, 0.6);
 	  backdrop-filter: blur(6px);
       box-shadow: var(--shadow);
     }
