--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       color: var(--text);
       line-height: 1.6;
       min-height: 100vh;
-      background: #e7e8e8; 
+      background: #d4d4d4; 
     }
 
     a{color:inherit; text-decoration:none}
