--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
     }
 
     .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
-    .hero p{ max-width:720px; margin:8px auto; color: rgba(255,255,255,.9); font-size: clamp(1.25rem, 2.5vw, 1.75rem); line-height: 1.5; }
+    .hero p{ max-width:720px; margin:8px auto; color: #fff; -webkit-text-stroke: 1px #000; text-stroke: 1px #000; font-size: clamp(1.25rem, 2.5vw, 1.75rem); line-height: 1.5; }
+
+   /* text color */
+   /* outline in black */
+   /* non-webkit fallback */
+
+
 
     .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:20px }
     .btn {
