--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       color: var(--text);
       line-height: 1.6;
       min-height: 100vh;
-      background: #b3b3b3; 
+      background: #474747; 
     }
 
     a{color:inherit; text-decoration:none}
