--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
   <header class="hero">
     <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
-    <p>Natural leader, fast learner, and very competent individual.</p>
-    <p>Skilled with Unity, AI, SolidWorks, Calculus, and Technology in general.</p>
+    <p>Natural leader, fast learner, and confident individual.</p>
+    <p>Skilled with Unity, AI, SolidWorks, and Calculus.</p>
     <p>Capable of teaching myself new skills to accomplish my goals.</p>
 
     <div class="top-actions">
