--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
         <h2>Work Experience</h2>
         <p>
-          MidGrove LLC - Property Manager and Developer 2022 - 2026 (current
+          Midgrove Centere - Property Manager and Developer 2022 - 2026+ (current
           job)
         </p>
       </div>
