--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         color: var(--text);
         line-height: 1.6;
         min-height: 100vh;
+        transform: scale(0.8);
+        transform-origin: top left;
 
         /* Full-page background image */
         background: url("https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1")
@@ -299,12 +301,11 @@
         <h2>About Me</h2>
         <p>
           I am a deep thinker and a spiritual person. I like to be around people
-          and travel. I spend a lot of my free time hiking,
-          playing video games, and socializing. One thing that changed my life
-          was my recovery from drug and alcohol addiction. I'm currently 10
-          years sober. I currently work as a property manager and developer. I
-          want to break into coding because it feels very 
-          natural to me.
+          and travel. I spend a lot of my free time hiking, playing video games,
+          and socializing. One thing that changed my life was my recovery from
+          drug and alcohol addiction. I'm currently 10 years sober. I currently
+          work as a property manager and developer. I want to break into coding
+          because it feels very natural to me.
         </p>
 
         <h2>Other Skills</h2>
@@ -326,14 +327,15 @@
 
         <h2>Education</h2>
         <p>
-          I took courses at <strong>The University of Arizona</strong> and <strong>Florida State
-          University</strong>. Many of my skills are self taught.
+          I took courses at <strong>The University of Arizona</strong> and
+          <strong>Florida State University</strong>. Many of my skills are self
+          taught.
         </p>
 
         <h2>Work Experience</h2>
         <p>
-          Midgrove Centere - Property Manager and Developer 2022 - 2026+ (current
-          job)
+          Midgrove Centere - Property Manager and Developer 2022 - 2026+
+          (current job)
         </p>
       </div>
     </div>
